Updated site content

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
 <!--        Body-Starts     -->
 <main>
     <!--        Hero-Starts          -->
-    <div class="max-w-7xl mx-auto flex flex-col-reverse md:flex-row items-center px-6 py-12 gap-12">
+    <div class="max-w-7xl mx-auto flex flex-col-reverse md:flex-row items-center px-6 lg:mt-8">
         <!-- Left -->
         <div class="flex flex-col justify-start items-start text-left space-y-6 font-poppins w-full md:w-1/2">
             <h1 class="font-black text-4xl sm:text-5xl lg:text-[63px] text-[#0B1B35] leading-tight tracking-tight">
@@ -62,7 +62,7 @@
                 as a digital creator. In has a after comment
             </p>
 
-            <div class="flex flex-col sm:flex-row items-center gap-6 text-lg">
+            <div class="flex sm:flex-row items-center gap-6 text-lg">
                 <button class="bg-[#ff6600] hover:bg-orange-400 text-white font-medium py-3 px-6 rounded-full shadow-md hover:shadow-lg transition-all text-[16px] duration-300">
                     Get Started
                 </button>
@@ -80,7 +80,7 @@
     <!--        Hero-Ends            -->
 
     <!--        Service-Starts      -->
-    <div class="max-w-7xl mx-auto text-center mb-20 px-6 space-y-4">
+    <div class="max-w-7xl mx-auto text-center mt-24 lg:mt-10 mb-20 px-6 space-y-4">
         <h4 class="font-abel tracking-[4px] text-gray-500">SERVICES</h4>
         <h1 class="lg:text-5xl text-2xl font-abel sm:text-4xl font-bold mb-12 text-gray-800">Our Vision & Our Goal</h1>
 
@@ -123,15 +123,15 @@
     <!--        Service-Ends        -->
 
     <!--        Explore-Starts      -->
-    <div class="max-w-7xl mx-auto flex flex-col md:flex-row justify-between gap-4 items-center px-6 py-16">
-        <div class="flex flex-col w-full md:w-1/2 space-y-24">
+    <div class="max-w-7xl mx-auto flex flex-col md:flex-row justify-between gap-8 items-center px-6 py-16">
+        <div class="flex flex-col w-full md:w-1/2 space-y-6 lg:space-y-20">
             <div class="space-y-6">
-                <h2 class="text-2xl text-[#1E0E62] font-abel sm:text-3xl font-medium">Many Blocks and <br> Components</h2>
-                <p class="font-normal w-96 font-poppins text-base sm:text-lg lg:text-[16px] text-gray-500 leading-[30px]">Startup Framework contains components and complex blocks which can easily be integrated into almost any design.</p>
+                <h2 class="text-2xl text-[#1E0E62] font-abel sm:text-3xl font-medium text-center lg:text-left">Many Blocks and <br> Components</h2>
+                <p class="font-normal text-center lg:w-96 font-poppins text-base sm:text-lg lg:text-[16px] text-gray-500 leading-[30px] lg:text-left">Startup Framework contains components and complex blocks which can easily be integrated into almost any design.</p>
             </div>
-              <button class="font-poppins w-40 px-6 py-2 border border-gray-300 rounded-full text-gray-700 hover:bg-gray-100 transition">
+              <button class="lg:w-44 font-poppins px-6 py-2 border border-gray-300 rounded-full text-gray-700 hover:bg-gray-100 transition">
                 Explore
-            </button>
+              </button>
         </div>
         <div class="w-full md:w-1/2">
             <img src="assets/Video%20Player.png" class="w-full h-auto" alt="">
@@ -184,7 +184,7 @@
 </main>
 
 <!-- Team Section -->
-<div class="text-center mt-20 mb-12 space-y-4">
+<div class="text-center mt-24 mb-6 space-y-4">
     <h4 class="uppercase tracking-[4px] text-gray-400 text-sm font-abel">Our Team</h4>
     <h2 class="text-3xl sm:text-5xl font-semibold text-gray-800 font-abel">Meet The Team</h2>
 </div>
